docs: trim README of surplus
Condense the native-access note to one line, collapse the verbose
build-pipeline bullets, drop the repeated "never committed" notes and the
ABI section (it lives in the source docstring). Keep install, usage,
platforms, and the short build/develop sections.